--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/debjohnson33/swag-shop-api/issues"
   },
-  "homepage": "https://github.com/debjohnson33/swag-shop-api#readme"
+  "homepage": "https://github.com/debjohnson33/swag-shop-api#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.1.3"
+  }
 }
